tests/paczka2/big_fuzzy/58623952.err
Error in line 14: A119 A109 85,7
Error in line 6: jpnp A119 0,1
Error in line 18: mh618t A109 27,4
Error in line 29: mh61Kt A404 0,K
Error in line 26: mh618t A579 69,4
Error in line 30: mh618t A404 0,8
Error in line 51: vWU0 A109 3,9
Error in line 56: C7DwiSR A119 31,77
Error in line 52: vWU0 A579 22,5
Error in line 57: C7DwiSR A119 59,9
Error in line 63: uqDJk A109 77,1
Error in line 67: uqDJk A404 89,3
Error in line 68: uqDJk A109 53,3
Error in line 65: 0eBYP0yH A579 41,3
Error in line 83: 0eBYP0yH A109 29,3
Error in line 81: C7DwiSR A579 15,8
Error in line 85: C7DwiSR A119 57,3
Error in line 84: 0eBYP0yH A119 81,3
Error in line 90: uqDJk A404 77,1
Error in line 94: vWU0 A119 14,1
Error in line 91: uqDJk A579 42,3
Error in line 95: vWU0 A404 55,2
Error in line 101: mh618t A579 12,7
Error in line 102: vWU0 A109 79,2
Error in line 109: vWU0 V109 13,7
Error in line 122: uqDJk A404 57,2
Error in line 132: C7DwiSR A579 55,3
Error in line 131: uqDJk A109 85,6
Error in line 142: C7DwiSR A109 77,15
Error in line 112: mh618t A119 257,7
Error in line 155: mh618t A579 80,24
Error in line 162: A119 A119 58,6
Error in line 158: uqDJk A579 16,4
Error in line 160: jpnp A579 48,6
Error in line 167: jpnp A404 69,8
Error in line 168: 0eBYP0yH A109 16,4
Error in line 166: uqDJk A404 14,3
Error in line 176: uqDJk A579 31,0
Error in line 177: uqDJk A404 39,0
Error in line 174: A119 A404 73,3
Error in line 186: mh618t A579 66,2
Error in line 154: C7DwiSR A109 209,2
Error in line 191: jpnp A404 36,3
Error in line 202: jpnp A579 66,0
Error in line 192: mh618t A404 53,5
Error in line 205: vWU0 A579 62,2
Error in line 206: mh618t A579 50,0
Error in line 220: jpnp A119 30,41
Error in line 215: mh618t A109 74,9
Error in line 230: 0eBYP0yH A109 23,7
Error in line 242: mh618t A404 54,8
